# SWE-bench

./: .gitignore  README.md  pyproject.toml
assets/: evaluation.md
swebench/harness/: run_evaluation.py
swebench/harness/morph_eval/: __init__.py  run_evaluation_morph.py
